<resources>
    <string name="app_name">Maxwell\'s Demon</string>
    <string name="play_button">Play</string>
    <string name="settings_button">Settings</string>
    <string name="about_button">About</string>
    <string name="lock_levels_button">Lock Levels</string>

    <string name="game_activity_title">Level *</string>
    <string name="pause_button_text">Pause</string>
    <string name="unpause_button_text">Start</string>
    <string name="quit_button_text">Quit</string>
    <string name="pause_message">Game Paused</string>

    <string name="levels_activity_title">Levels</string>

    <string name="settings_activity_title">Settings</string>
    <string name="settings_back_pause_text">Back button pauses/resumes game</string>
    <string name="settings_sensitivity_text">Sensitivity: *%</string>
    <string name="settings_lock_all_button">Lock All Levels</string>

    <string name="about_activity_title">About</string>
    <string name="about_text">Copyright © 2017 Alex Fischer, All Rights Reserved. See alexfischer.me for more information.</string>

    <string name="admob_app_id">ca-app-pub-8119969654620410~1595620887</string>
    <string name="test_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="main_banner_ad_unit_id">ca-app-pub-8119969654620410/3072354089</string>
    <string name="levels_banner_ad_unit_id">ca-app-pub-8119969654620410/1497889280</string>
</resources>
