<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.alexfischer.maxwellsdemon.SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:text="@string/settings_back_pause_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/settings_item_vertical_margin"
                android:layout_marginBottom="@dimen/settings_item_vertical_margin"
                android:id="@+id/backPauseCheckBox"
                android:textAppearance="@style/TextAppearance.AppCompat"/>

            <TextView
                android:text="@string/settings_sensitivity_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/settings_item_vertical_margin"
                android:id="@+id/sensitivityLabel"
                android:textAppearance="@style/TextAppearance.AppCompat"/>

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/settings_item_vertical_margin"
                android:max="100"
                android:id="@+id/sensitivityBar"/>

            <Button
                android:text="@string/settings_lock_all_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/settings_item_vertical_margin"
                android:layout_marginBottom="@dimen/settings_item_vertical_margin"
                android:onClick="onLockAllLevelsClick"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
